<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF772D05">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="606dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="430dp"
            android:layout_height="189dp"
            android:padding="0sp"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#DC83240D"
            android:text="@string/DripInfo"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82270E"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dripTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:gravity="center"
                android:text="25"
                android:textSize="55sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dripStartBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Start" />

                <Button
                    android:id="@+id/dripResetBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reset" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/DripTitle"
        android:layout_width="308dp"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/DripMethod"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="51dp" />
</android.support.constraint.ConstraintLayout>