<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF772D05">

    <TextView
        android:id="@+id/frenchPressTitle"
        android:layout_width="308dp"
        android:layout_height="69dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:gravity="center"
        android:text="@string/FrenchPress"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="598dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frenchPressTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="373dp"
                android:layout_height="172dp"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/frenchpressinfo1"
                android:layout_width="376dp"
                android:layout_height="332dp"
                android:layout_gravity="center_horizontal"
                android:background="#DC83240D"
                android:text="@string/FrenchPressInfo1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/FPCoolTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="25"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/FPCoolWaterStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="startCoolTimer"
                    android:text="@string/Start" />

                <Button
                    android:id="@+id/FPCoolWaterReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/frenchpressinfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/FrenchPressInfo2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/FPSteepTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="6:00"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/FPSteepStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Start" />

                <Button
                    android:id="@+id/FPSteepReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/frenchpressinfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/FrenchPressInfo3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/FPressTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="30"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/FPressStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Start" />

                <Button
                    android:id="@+id/FPressReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>